--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.2",
     "axios": "^1.8.0",
+    "framer-motion": "^12.5.0",
     "mongoose": "^8.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
