--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.0.2",
     "axios": "^1.8.0",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "mongoose": "^8.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.2"
   },
   "devDependencies": {
